update starting url

--- a/.github/workflows/run-scandium.yml
+++ b/.github/workflows/run-scandium.yml
@@ -23,6 +23,11 @@ on:
         required: false
         default: 'chrome'
         type: string
+      starting_url:
+        description: 'Starting URL'
+        required: false
+        default: 'https://www.google.com'
+        type: string
 
 jobs:
   execute-scandium-script:
@@ -32,7 +37,7 @@ jobs:
       API_TOKEN: ${{ secrets.API_TOKEN }}
       PROJECT_ID: ${{ secrets.PROJECT_ID }}
       HUB_URL: ${{ secrets.HUB_URL }}
-      STARTING_URL: ${{ secrets.STARTING_URL }}
+      STARTING_URL: ${{ inputs.starting_url }}
       SUITE_ID: ${{ secrets.SUITE_ID }}
       BROWSER: ${{ inputs.browser }}
       SCREENSHOT: true
