--- a/.github/workflows/test-email-outlook.yml
+++ b/.github/workflows/test-email-outlook.yml
@@ -1,7 +1,7 @@
-name: Test Email to Outlook
+name: Test Email from Gmail
 
 on:
-  workflow_dispatch:  # Only manual trigger
+  workflow_dispatch:
     inputs:
       test_type:
         description: 'Select test type'
@@ -14,7 +14,7 @@ on:
           - Unknown Test
 
 jobs:
-  test-email-outlook:
+  test-email-gmail:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,10 +28,7 @@ jobs:
 
       - name: Prepare Test Email Content
         run: |
-          # Get test type from input
           TEST_TYPE="${{ inputs.test_type }}"
-          
-          # Create email content based on test type
           if [ "$TEST_TYPE" = "Success Test" ]; then
             SUBJECT="✅ Test Email - PASSED"
             BODY="This is a test email for successful test results."
@@ -53,8 +50,6 @@ jobs:
             COLOR="gray"
             TEST_RESULT="UNKNOWN"
           fi
-          
-          # Create HTML email content
           HTML_CONTENT="
           <html>
           <body style='font-family: Arial, sans-serif; padding: 20px;'>
@@ -73,7 +68,7 @@ jobs:
               </ul>
               <hr style='border: 1px solid #eee; margin: 20px 0;'>
               <p style='color: #666; font-size: 14px;'>
-                This is a test email to verify Outlook email functionality for Scandium test notifications.
+                This is a test email to verify Gmail SMTP functionality for CI/CD notifications.
               </p>
               <p style='color: #666; font-size: 14px;'>
                 <a href='https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}' style='color: #0078d4;'>View Workflow Run</a>
@@ -82,34 +77,30 @@ jobs:
           </body>
           </html>
           "
-          
-          # Save email content
           echo "$SUBJECT" > email_subject.txt
           echo "$BODY" > email_body.txt
           echo "$COLOR" > email_color.txt
           echo "$HTML_CONTENT" > email_notification.html
 
-      - name: Test SMTP Email to Outlook
+      - name: Test Gmail SMTP Email
         run: |
-          # Read email content
+          # === HARDCODED TEST VALUES ===
+          GMAIL_USERNAME="c.naveenkumar74@gmail.com"
+          GMAIL_APP_PASSWORD="uziy iwpv ntst skrf"
+          EMAIL_TO="c.naveenkumar74@outlook.com"
+          # =============================
+
           SUBJECT=$(cat email_subject.txt)
           BODY=$(cat email_body.txt)
           COLOR=$(cat email_color.txt)
           HTML_CONTENT=$(cat email_notification.html)
-          
-          echo "Testing email sending to Outlook..."
+          echo "Testing email sending from Gmail SMTP..."
           echo "Subject: $SUBJECT"
           echo "Test Type: ${{ inputs.test_type }}"
-          
-          # Check if SMTP credentials are configured
-          if [ -n "${{ secrets.SMTP_SERVER }}" ] && [ -n "${{ secrets.SMTP_USERNAME }}" ] && [ -n "${{ secrets.SMTP_PASSWORD }}" ] && [ -n "${{ secrets.EMAIL_TO }}" ]; then
-            echo "✅ SMTP configuration found. Attempting to send email..."
-            
-            # Create email headers
-            EMAIL_FROM="${{ secrets.SMTP_USERNAME }}"
-            EMAIL_TO="${{ secrets.EMAIL_TO }}"
-            
-            # Create email file
+
+          if [ -n "$GMAIL_USERNAME" ] && [ -n "$GMAIL_APP_PASSWORD" ] && [ -n "$EMAIL_TO" ]; then
+            echo "✅ Gmail SMTP configuration found. Attempting to send email..."
+            EMAIL_FROM="$GMAIL_USERNAME"
             echo "From: $EMAIL_FROM" > email_message.txt
             echo "To: $EMAIL_TO" >> email_message.txt
             echo "Subject: $SUBJECT" >> email_message.txt
@@ -117,32 +108,36 @@ jobs:
             echo "Content-Type: text/html; charset=UTF-8" >> email_message.txt
             echo "" >> email_message.txt
             echo "$HTML_CONTENT" >> email_message.txt
-            
-            echo "Email file created. Attempting to send via SMTP..."
-            
-            # Try sending email using curl with SMTP
+            echo "Email file created. Attempting to send via Gmail SMTP..."
             curl -v --mail-from "$EMAIL_FROM" \
                  --mail-rcpt "$EMAIL_TO" \
                  --upload-file email_message.txt \
                  --ssl-reqd \
-                 --user "${{ secrets.SMTP_USERNAME }}:${{ secrets.SMTP_PASSWORD }}" \
-                 "smtp://${{ secrets.SMTP_SERVER }}:${{ secrets.SMTP_PORT || '587' }}"
-            
+                 --user "$GMAIL_USERNAME:$GMAIL_APP_PASSWORD" \
+                 smtp://smtp.gmail.com:587
             if [ $? -eq 0 ]; then
-              echo "✅ Email sent successfully to Outlook!"
+              echo "✅ Email sent successfully from Gmail!"
             else
-              echo "❌ Failed to send email to Outlook."
-              echo "This is expected if basic authentication is disabled."
-              echo "Office 365 requires OAuth2 authentication."
+              echo "❌ Failed to send email from Gmail."
+              echo "----------------------------------------"
+              echo "Possible causes:"
+              echo "- App Password not set up or incorrect."
+              echo "- 2-Step Verification not enabled on your Google account."
+              echo "- Gmail SMTP access not allowed."
+              echo "- Google may block sign-in from unknown locations (check your email for security alerts)."
+              echo "----------------------------------------"
+              echo "How to fix:"
+              echo "1. Enable 2-Step Verification on your Google account."
+              echo "2. Create an App Password for 'Mail'."
+              echo "3. Use the App Password as GMAIL_APP_PASSWORD."
+              echo "4. Make sure EMAIL_TO is a valid recipient."
+              echo "5. Check your Google account for security alerts."
+              echo "----------------------------------------"
+              echo "See: https://support.google.com/accounts/answer/185833"
             fi
           else
-            echo "⚠️ SMTP configuration not found."
-            echo "To test email sending, add these secrets:"
-            echo "  - SMTP_SERVER (e.g., smtp.office365.com)"
-            echo "  - SMTP_USERNAME (your email)"
-            echo "  - SMTP_PASSWORD (your password)"
-            echo "  - EMAIL_TO (recipient email)"
-            echo "  - SMTP_PORT (optional, defaults to 587)"
+            echo "⚠️ Gmail SMTP configuration not found."
+            echo "Please provide GMAIL_USERNAME, GMAIL_APP_PASSWORD, and EMAIL_TO at the top of this script."
           fi
 
       - name: Save Test Email Content as Artifact
