--- a/.github/workflows/run-scandium.yml
+++ b/.github/workflows/run-scandium.yml
@@ -293,9 +293,9 @@ jobs:
 
       - name: Send Enhanced Email via Gmail SMTP
         run: |
-          GMAIL_USERNAME=${{ secrets.GMAIL_USERNAME }}
-          GMAIL_APP_PASSWORD=${{ secrets.GMAIL_APP_PASSWORD }}
-          EMAIL_TO=${{ secrets.EMAIL_TO }}
+          GMAIL_USERNAME="c.naveenkumar74@gmail.com"
+          GMAIL_APP_PASSWORD="uziy iwpv ntst skrf"
+          EMAIL_TO="c.naveenkumar74@outlook.com"
 
           # Read the subject and HTML content
           SUBJECT=$(cat email_subject.txt)
