--- a/.github/workflows/test-email-outlook.yml
+++ b/.github/workflows/test-email-outlook.yml
@@ -85,9 +85,9 @@ jobs:
       - name: Test Gmail SMTP Email
         run: |
           # === HARDCODED TEST VALUES ===
-          GMAIL_USERNAME="c.naveenkumar74@gmail.com"
-          GMAIL_APP_PASSWORD="cpog hqug zacd ffyn"
-          EMAIL_TO="c.naveenkumar74@outlook.com"
+          GMAIL_USERNAME=c.naveenkumar74@gmail.com
+          GMAIL_APP_PASSWORD=cpog hqug zacd ffyn
+          EMAIL_TO=c.naveenkumar74@outlook.com
           # =============================
 
           SUBJECT=$(cat email_subject.txt)
