--- a/.github/workflows/test-email-outlook.yml
+++ b/.github/workflows/test-email-outlook.yml
@@ -85,9 +85,9 @@ jobs:
       - name: Test Gmail SMTP Email
         run: |
           # === HARDCODED TEST VALUES ===
-          GMAIL_USERNAME="c.naveenkumar74@gmail.com"
-          GMAIL_APP_PASSWORD="cpog hqug zacd ffyn"
-          EMAIL_TO="c.naveenkumar74@outlook.com"
+          GMAIL_USERNAME="${{ secrets.GMAIL_USERNAME }}"
+          GMAIL_APP_PASSWORD="${{ secrets.GMAIL_APP_PASSWORD }}"
+          EMAIL_TO="${{ secrets.EMAIL_TO }}"
 
           SUBJECT=$(cat email_subject.txt)
           BODY=$(cat email_body.txt)
